<resources>
    <string name="app_name">Ir0h proxy</string>
    <string name="endpoint_key">Ключ конечной точки</string>
    <string name="vpn">VPN</string>
    <string name="proxy">Proxy</string>
    <string name="enable">Вкл.</string>
    <string name="disable">Выкл.</string>
    <string name="enabled">Включено</string>
    <string name="disabled">Выключено</string>
    <string name="previous_configs">Предыдущие конфигурации</string>
    <string name="notification_channel_name">Ir0h VPN</string>
    <string name="notification_channel_description">Статус SOCKS-прокси</string>
    <string name="notification_title">VPN работает</string>
    <string name="notification_text">Трафик проксируется</string>
    <string name="foreground_start_failed">Не удалось запустить прокси</string>
    <string name="listen_address">Локально прослушиваемый адрес</string>
    <string name="backward">Назад</string>
    <string name="add_connection">Добавить</string>
    <string name="no_connection_selected">Сначала выберите подключение</string>
    <string name="no_username">без логина</string>
    <string name="no_connections">Нет сохранённых подключений</string>
    <string name="ticket">Тикет</string>
    <string name="user">Логин</string>
    <string name="password">Пароль</string>
    <string name="save">Сохранить</string>
    <string name="ticket_required">Введите тикет</string>
    <string name="add_manually">Добавить вручную</string>
    <string name="add_from_clipboard">Вставить из буфера</string>
    <string name="invalid_link">Неверная ссылка</string>
    <string name="clipboard_empty">Буфер обмена пуст</string>
    <string name="no_name">Без имени</string>
    <string name="connection_name">Название</string>
    <string name="listen_host">Хост</string>
    <string name="localhost">localhost</string>
    <string name="zeros">0.0.0.0</string>
    <string name="listen_port">Порт</string>
    <string name="first_dns_servers">Первичные DNS-серверы</string>
    <string name="add_dns">Добавить DNS</string>
    <string name="settings">Настройки</string>
    <string name="edit_config">Редактировать конфиг</string>
    <string name="remove">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="delete_confirm_title">Удалить подключение?</string>
    <string name="delete_confirm_message">Это действие невозможно отменить.</string>
    <string name="cancel">Отмена</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="no_share_apps">Нет подходящих приложений</string>
</resources>